Bathymetry and LandMask Tools: initial revisions to help avoid crash